# jarvisvr

./: .editorconfig  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md
.cursor/: hooks.json
.cursor/hooks/: block-rm-rf.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
agent-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
agent-backend/jarvis_backend/: __init__.py  __main__.py  catalog.py  config.py  logging_setup.py  protocol.py  providers.py  server.py  settings_service.py  setup_wizard.py
agent-backend/jarvis_backend/agent/: __init__.py  agent.py  agent_memory.py  agents.py  authoring.py  llm.py  memory.py  orchestrator.py  persona.py  state.py  trace.py  user_roster.py
agent-backend/jarvis_backend/agent/tools/: __init__.py  base.py  builtins.py  knowledge_tools.py  perception_tools.py  widget_tools.py
agent-backend/jarvis_backend/perception/: __init__.py  buffer.py  vision.py
agent-backend/jarvis_backend/skills/: __init__.py  loader.py
agent-backend/scripts/: smoke_client.py
agent-backend/tests/: conftest.py  test_agent.py  test_agent_branches.py  test_agent_extra.py  test_agent_internals.py  test_agent_memory.py  test_agents_and_roster.py  test_authoring.py  test_authoring_full.py  test_barge_in.py  test_branch_coverage.py  test_catalog.py  test_catalog_full.py  test_cli_logging.py  test_config_env.py  test_coverage_mopup.py  test_llm_full.py  test_memory_full.py  test_misc_branches.py  test_more_branches.py  test_orchestrator.py  test_orchestrator_extra.py  test_perception.py  test_perception_full.py  test_protocol.py  test_protocol_full.py  test_providers.py  test_server.py  test_server_full.py  test_server_internals.py  test_settings.py  test_settings_full.py  test_setup_wizard.py  test_setup_wizard_full.py  test_skills.py  test_skills_loader_full.py  test_tools.py  test_tools_full.py  test_tracing.py  test_v13_socket.py
agent-backend/tests/fixtures/skills/orchestration/task-decomposition/: SKILL.md
agent-backend/tests/fixtures/skills/perception/identify-object/: SKILL.md
agent-backend/tests/fixtures/skills/research/web-research/: SKILL.md
docs/: FEATURES.md  HOLO_TOOLS.md  ORCHESTRATION.md  PROTOCOL.md  PUBLISHING.md  README.md  configuration.md  faq.md  getting-started.md  glossary.md  installation.md
docs/assets/: README.md
docs/components/: agent-backend.md  holo-tools.md  infra.md  shared-protocol.md  unity-client.md  voice-service.md
docs/concepts/: agent-loop.md  holograms.md  overview.md  perception.md  voice.md
docs/guides/: add-a-skill.md  add-a-widget.md  add-an-llm-provider.md  deploy.md  testing.md  troubleshooting.md  write-a-tool.md
docs/reference/: cli.md  env-vars.md  message-index.md
holo-tools/: README.md  pyproject.toml  registry.json  tools.json
holo-tools/holo_tools/: __init__.py  loader.py  tools.py  validate.py
holo-tools/scripts/: generate_docs.py
holo-tools/tests/: test_generate_docs.py  test_loader.py  test_registry.py  test_tools.py  test_tools_derive.py  test_validate.py  test_validate_more.py
holo-tools/ts/: widgets.ts
infra/: .env.example  Makefile  README.md  docker-compose.gpu.yml  docker-compose.mock.yml  docker-compose.yml
infra/e2e/: conftest.py  harness.py  holo_tools.py  requirements.txt  test_conformance.py  test_harness_unit.py  test_mock_server.py
infra/mock-backend/: Dockerfile  requirements.txt  server.py
infra/scripts/: _lib.sh  coverage.sh  dev_down.sh  dev_up.sh  e2e.sh  fmt.sh  install.sh  lint.sh  mock.sh  test.sh
shared-protocol/: README.md
shared-protocol/python/: pyproject.toml
shared-protocol/python/src/jarvis_protocol/: __init__.py  catalog.py  codec.py  models.py  schemas.py  version.py
shared-protocol/python/tests/: test_all_message_types.py  test_authoring_tracing.py  test_coverage_internals.py  test_orchestration.py  test_perception.py  test_reference_example.py  test_roundtrip.py  test_schema.py  test_settings.py
shared-protocol/schema/: agent.observation.schema.json  agent.speech.schema.json  agent.thinking.schema.json  agent.transcript.schema.json  client.ack.schema.json  client.agent_inspect.schema.json  client.author_agent.schema.json  client.author_list.schema.json  client.author_skill.schema.json  client.barge_in.schema.json  client.bye.schema.json  client.hello.schema.json  client.interaction.schema.json  client.scene.schema.json  client.settings_get.schema.json  client.settings_update.schema.json  client.trace_get.schema.json  client.trace_subscribe.schema.json  common.schema.json  envelope.schema.json  error.schema.json  heartbeat.schema.json  holo.destroy.schema.json  holo.layout.schema.json  holo.spawn.schema.json  holo.update.schema.json  holo_object.schema.json  orchestration.agent_status.schema.json  orchestration.handoff.schema.json  orchestration.plan.schema.json  orchestration.trace_event.schema.json  perception.audio_event.schema.json  perception.audio_scene.schema.json  perception.gaze.schema.json  perception.request.schema.json  perception.scene_objects.schema.json  perception.state.schema.json  perception.vision_frame.schema.json  (+9 more)
skills/: README.md  index.json
unity-client/: README.md
voice-service/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
voice-service/jarvis_voice/: __init__.py  __main__.py  ambient.py  audio.py  bridge.py  config.py  pipeline.py  protocol.py  sound_events.py  stt.py  tts.py  wakeword.py
voice-service/tests/: conftest.py  test_ambient.py  test_ambient_extra.py  test_audio.py  test_barge_in.py  test_bridge.py  test_bridge_extra.py  test_cli.py  test_config.py  test_coverage_gaps.py  test_engines.py  test_integration.py  test_pipeline.py  test_pipeline_extra.py  test_protocol.py  test_protocol_extra.py  test_sound_events.py  test_sound_events_extra.py  test_stt_engines.py  test_tts_engines.py  test_wakeword.py
(+184 files in other folders)
