[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-backend"
version = "0.1.0"
description = "JarvisVR agent-backend: the LLM agent 'brain' WebSocket server for the Quest 3 mixed-reality client."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "JarvisVR" }]
keywords = ["jarvis", "vr", "mixed-reality", "llm", "agent", "websocket", "quest3"]

# Pinned core dependencies. The server runs fully offline with the deterministic
# MockLLM, so none of the optional LLM SDKs are required to demo the stack.
dependencies = [
    "websockets==12.0",
    "pydantic>=2.5,<3",
    "python-dotenv>=1.0,<2",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
# Native first-party SDKs (optional — generic OpenAI-compatible works without them).
openai = ["openai>=1.40,<2"]
anthropic = ["anthropic>=0.34,<1"]
# Universal multi-provider adapter: one extra → OpenAI, Anthropic, Gemini/Vertex,
# Azure, Bedrock, Mistral, Cohere, Groq, Together, OpenRouter, DeepSeek, xAI,
# Perplexity, Fireworks, Ollama/local, and many more. `[llm]` is an alias.
providers = ["litellm>=1.50,<2"]
llm = ["litellm>=1.50,<2"]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<0.25",
    "pytest-cov>=5,<6",
]
# Convenience meta-extra to install everything.
all = [
    "openai>=1.40,<2",
    "anthropic>=0.34,<1",
    "litellm>=1.50,<2",
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<0.25",
    "pytest-cov>=5,<6",
]

[project.scripts]
jarvis-backend = "jarvis_backend.__main__:main"

[project.urls]
Homepage = "https://github.com/jarvisvr/jarvisVR"

[tool.setuptools.packages.find]
include = ["jarvis_backend*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
source = ["jarvis_backend"]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 99
