[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-holo-tools"
version = "1.1.0"
description = "JarvisVR holographic widget catalog, agent tool/function schemas, and validators."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "JarvisVR" }]
keywords = ["jarvisvr", "mixed-reality", "holograms", "agent-tools", "json-schema"]
dependencies = [
    "jsonschema>=4.18",
]

[project.optional-dependencies]
test = ["pytest>=7", "pytest-cov>=4"]

[project.urls]
Documentation = "../docs/HOLO_TOOLS.md"
Protocol = "../docs/PROTOCOL.md"

[tool.setuptools]
# registry.json / tools.json live at the holo-tools/ root (the language-neutral
# single source of truth). The loaders locate them by searching upward, which
# works for editable installs (`pip install -e .`) and when running from source.
packages = ["holo_tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["holo_tools"]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 100
