[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jarvis-protocol"
version = "1.0.0"
description = "JarvisVR wire protocol (v1): pydantic models + JSON Schema validators (single source of truth in ../schema)."
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "JarvisVR Integration" }]
keywords = ["jarvisvr", "websocket", "protocol", "json-schema", "mixed-reality"]
dependencies = [
  "pydantic>=2.5",
  "jsonschema>=4.18",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]

[project.urls]
Homepage = "https://github.com/sumitaich1998/jarvisvr"
Protocol = "https://github.com/sumitaich1998/jarvisvr/blob/main/docs/PROTOCOL.md"

[tool.hatch.build.targets.wheel]
packages = ["src/jarvis_protocol"]

[tool.hatch.build.targets.sdist]
include = ["src/jarvis_protocol", "tests", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["jarvis_protocol"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "\\.\\.\\.",
]
